cmake_minimum_required(VERSION 3.25)
project(cv)
SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_C_FLAGS_DEBUG "$ENV{CFLAGS} -O0 -Wall -g -ggdb")
SET(CMAKE_C_FLAGS_RELEASE "$ENV{CFLAGS} -O3 -Wall")
aux_source_directory(/home/cwm/Graduation/cv/source all_cpp_file)
SET(all_cpp_file ${all_cpp_file} /home/cwm/Graduation/cv/json11/json11.cpp)
SET(all_cpp_file ${all_cpp_file} /home/cwm/Graduation/cv/main.cpp)
message(STATUS "all cpp file : " ${all_cpp_file})
find_package(OpenCV REQUIRED)
add_executable(cv_server ${all_cpp_file})
target_include_directories(cv_server PRIVATE hpp json11 util)
target_include_directories(cv_server PRIVATE ${OpenCV_INCLUDE_DIRS})
target_link_libraries(cv_server pthread)
target_link_libraries(cv_server ${OpenCV_LIBS})